@@ -40,8 +40,10 @@ requires       ('IO::Interactive'               => '0');
 requires       ('Term::ProgressBar'             => '2.00');
 requires       ('Text::Trim'                    => '0');
 requires       ('Digest::MD4'                   => '0');
-requires       ('CHI'                           => '0');
+requires       ('CHI'                           => '0.34');
 requires       ('CHI::Driver::Memory'           => '0');
+requires       ('CHI::Driver::File'             => '0');
+requires       ('CHI::Driver::BerkeleyDB'       => '0');
 requires       ('Module::Pluggable'             => '0');
 recommends     ('DBD::Pg'                       => '0');
 
