@@ -10,6 +10,7 @@ has arguments => (
     isa           => HashRef,
     is            => 'ro',
     documentation => "Arguments passed from Hailo",
+    auto_deref    => 1,
 );
 
 1;
