@@ -8,6 +8,7 @@
       backends.
     - Use Module::Pluggable for finding plugins
     - Disable SQLite's journal while training. Speeds up long imports.
+    - Add CHI backend with File, Memory, BerkeleyDB etc. backends
 
 0.08 Wed Feb 10 00:06:20 GMT 2010
     - 0.07 broke the PostgreSQL and MySQL backend. Fixed them.
